Adjusted game over text font size to prevent overflow and made it responsive for various screen sizes

--- a/style.css
+++ b/style.css
@@ -91,6 +91,11 @@ box-shadow: inset 0 0 0 0.6em #D4BEE4;
     border-radius: 7em;
 }
 
+.game-over-text{
+    display: none;
+    font-size: 1.5em;
+}
+
 
 /* The Snake Image and Text Instruction */
 
@@ -103,7 +108,7 @@ box-shadow: inset 0 0 0 0.6em #D4BEE4;
     align-items: center;
 
 }
-.text-instruction{
+.start-game-text{
     font-size: 2em;
 }
 
@@ -149,8 +154,12 @@ box-shadow: inset 0 0 0 0.6em #D4BEE4;
         border-radius: 6em;
     }
     
-    .text-instruction{
+    .start-game-text{
         font-size: 1.3em;
+    }
+
+    .game-over-text{
+        font-size: 1em;
     }
     
 }
